[build-system]
requires = ["setuptools >= 68", "setuptools_scm>=8", "wheel >= 0.36"]
build-backend = "backend"
backend-path = ["build-backend"]

[project]
authors = [{name = "lab-cosmo developers"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "PET model extension for processing neighbor lists"
dynamic = ["version", "dependencies"]
license = {text = "BSD-3-Clause"}
name = "pet-neighbors-convert"
readme = "README.rst"
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/lab-cosmo/pet-neighbors-convert"
documentation = "https://github.com/lab-cosmo/pet-neighbors-convert"
repository = "https://github.com/lab-cosmo/pet-neighbors-convert"
issues = "https://github.com/lab-cosmo/pet-neighbors-convert/issues"

[tool.check-manifest]
ignore = ["src/pet_neighbors_convert/_version.py"]

[tool.setuptools_scm]
version_file = "src/pet_neighbors_convert/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
